White space matters a great deal when using redcloth.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,11 +3,19 @@
 When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
 $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
 
-\begin{aligned}
-\dot{x} & = \sigma(y-x) \\
-\dot{y} & = \rho x - y - xz \\
-\dot{z} & = -\beta z + xy
-\end{aligned}
+
+<%= red('h1. Give RedCloth a try!
+
+h2. sub heading
+
+p(my-class). A *simple* paragraph with
+a line break, some _emphasis_ and a "link":http://redcloth.org
+
+* an item
+* and another
+
+# one
+# two') %>
 
 <div id="placeholder" style="width:600px;height:300px;"></div>
 
