--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,12 @@
   <script type="text/javascript" src="MathJax/MathJax.js"></script>
   <%= javascript_include_tag "jquery-1.4.4.min", "jquery-ui-1.8.7.custom.min", "jquery.rails.js" %>
   <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'livepreview' %>
   <%= javascript_include_tag 'flot/jquery.flot' %>
+  <%= javascript_include_tag 'prettify/prettify' %>
 
   <%= stylesheet_link_tag 'application' %>
+  <%= stylesheet_link_tag 'prettify' %>
   <%= stylesheet_link_tag 'jquery-ui-1.8.7.custom' %>
  
   <%= csrf_meta_tag %>
