Moved the live preview to home/preview and made it root.

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -4,18 +4,23 @@
 }
 #preview {
   float: left;
-  width: 780px;
+  width: 700px;
+  border: 1px solid darkGray;
+  margin: 20px 0;
+  padding: 0 1em;
 }
 #test {
   overflow: hidden;
   clear: both;
   }
 
-#block {
+.block {
   margin: 0 20px;
-  text-align: justify;
   width: 500px;
-  }
+}
+.breathing-room {
+  margin: 40px 20px;
+}
 .pink {
   color: #FF0066;
 }
