--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -14,15 +14,18 @@
 }
 #preview {
   float: left;
-  width: 780px;
+  width: 700px;
+  border: 1px solid darkGray;
+  margin: 20px 0;
+  padding: 0 1em;
 }
 #test {
   overflow: hidden;
   clear: both;
 }
-#block {
+.block {
   margin: 0 20px;
-  text-align: justify;
   width: 500px;
 }
+.breathing-room { margin: 40px 20px; }
 .pink { color: #ff0066; }
