Followed a rails rumble tutorial to add twitter auth quickly. Navigate to /auth/twitter/ to log in using twitter. It seems to work.

--- a/app/views/home/preview.html.erb
+++ b/app/views/home/preview.html.erb
@@ -1,6 +1,5 @@
 <h4 class="block breathing-room"> This live preview is still a work in progress. You can get the javascript file
-  simply by inspecting this document or (for a potentially out of date copy) checking this 
-  gist.</h4>
+  simply by inspecting this document or (for a potentially out of date copy) checking <a href="https://gist.github.com/803294">this gist</a>.</h4>
 <% form_tag do %>
   <%= text_area_tag('content', @content, :rows => 40, :cols => 50)%>
 <% end %>
