Created posts scaffold

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -8,6 +8,7 @@
   border: 1px solid darkGray;
   margin: 20px 0;
   padding: 0 1em;
+  min-height: 350px;
 }
 #test {
   overflow: hidden;
@@ -23,4 +24,8 @@
 }
 .pink {
   color: #FF0066;
+}
+form {
+  float: left;
+  overflow: hidden;
 }
