--- a/app/views/layouts/post.html.erb
+++ b/app/views/layouts/post.html.erb
@@ -3,8 +3,7 @@
 <head>
   <title>Ashleigh</title>
   <%= javascript_include_tag "jquery-1.4.4.min", "jquery-ui-1.8.7.custom.min", "jquery.rails.js" %>
-  <%= javascript_include_tag 'application' %>
-  <%= javascript_include_tag 'livepreview' %>
+  <%= javascript_include_tag 'post' %>
   <%= javascript_include_tag 'flot/jquery.flot' %>
   <%= javascript_include_tag 'prettify/prettify' %>
 
