--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -18,6 +18,7 @@
   border: 1px solid darkGray;
   margin: 20px 0;
   padding: 0 1em;
+  min-height: 350px;
 }
 #test {
   overflow: hidden;
@@ -29,3 +30,7 @@
 }
 .breathing-room { margin: 40px 20px; }
 .pink { color: #ff0066; }
+form {
+  float: left;
+  overflow: hidden;
+}
