After much shenanigans I have a users table with a boolean field. The layout formatting of the posts is totally messed up now.

--- a/app/views/layouts/post.html.erb
+++ b/app/views/layouts/post.html.erb
@@ -8,16 +8,31 @@
   <%= javascript_include_tag 'prettify/prettify' %>
 
   <%= stylesheet_link_tag 'application' %>
+  <%= stylesheet_link_tag 'post' %>
   <%= stylesheet_link_tag 'prettify' %>
   <%= stylesheet_link_tag 'jquery-ui-1.8.7.custom' %>
  
   <%= csrf_meta_tag %>
 </head>
 <body>
-  <div id="the_content" class="bound">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+  <div id="wrapper">
+    <div class="modal">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+    </div>
+    <div class="header">
+      <div id="logo">
+        <h1><a href="#">lashleigh</a></h1>
+        <h2><%= red("Solve problem <--> imagine new project") %> </h2>
+      </div>
+    </div>
+
+    <div class="content">
+      <%= yield %>
+    </div>
+    <div id="sidebar">
+      <%= render :partial => "/posts/sidebar" %>
+    </div>
   </div>
 </body>
 </html>
