--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,27 +1,5 @@
-<h1>Listing posts</h1>
-
-<table>
-  <tr>
-    <th>User</th>
-    <th>Title</th>
-    <th>Content</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @posts.each do |post| %>
-  <tr>
-    <td><%= post.user_id %></td>
-    <td><%= post.title %></td>
-    <td><%= post.content %></td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+<% if @current_user and @current_user.admin? %>
+  <span id="new_post_link">(<%= link_to 'New', new_post_path %>)</span>
 <% end %>
-</table>
 
-<br />
-
-<%= link_to 'New Post', new_post_path %>
+<%= render :partial => 'summary', :collection => @posts %>
