--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -24,13 +24,6 @@
   overflow: hidden;
   clear: both;
 }
-.block {
-  margin: 0 20px;
-  width: 500px;
-}
+.block { margin: 0 20px; }
 .breathing-room { margin: 40px 20px; }
 .pink { color: #ff0066; }
-form {
-  float: left;
-  overflow: hidden;
-}
