--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -1,26 +1,22 @@
-#content {
-  float: left;
-  margin: 20px;
-}
 #preview {
-  float: left;
-  width: 700px;
+  float: right;
+  width: 440px;
   border: 1px solid darkGray;
   margin: 20px 0;
-  padding: 0 1em;
+  padding: 1em;
   min-height: 350px;
+}
+#new_post, .edit_post {
+  float: left;
+  overflow: hidden;
 }
 #test {
   overflow: hidden;
   clear: both;
-  }
-
-.block {
-  margin: 0 20px;
-}
-.breathing-room {
-  margin: 40px 20px;
 }
 .pink {
   color: #FF0066;
+}
+textarea {
+  width: 400px;
 }
