--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,6 @@
+<% if @current_user and @current_user.admin? %>
+  <span id="new_post_link">(<%= link_to 'New', new_post_path %>)</span>
+<% end %>
+
+<%= render :partial => 'posts/summary', :collection => @posts %>
 
