--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -3,20 +3,31 @@
 <head>
   <title>Ashleigh</title>
   <%= javascript_include_tag "jquery-1.4.4.min", "jquery-ui-1.8.7.custom.min", "jquery.rails.js" %>
+  <%= javascript_include_tag 'post' %>
   <%= javascript_include_tag 'flot/jquery.flot' %>
   <%= javascript_include_tag 'prettify/prettify' %>
 
   <%= stylesheet_link_tag 'application' %>
+  <%= stylesheet_link_tag 'home' %>
   <%= stylesheet_link_tag 'prettify' %>
   <%= stylesheet_link_tag 'jquery-ui-1.8.7.custom' %>
  
   <%= csrf_meta_tag %>
 </head>
 <body>
-  <div id="content">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+  <div id="wrapper">
+    <div class="modal">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+    </div>
+    <%= render :partial => "/home/header" %>
+
+    <div class="content">
+      <%= yield %>
+    </div>
+    <div id="sidebar">
+      <%= render :partial => "/posts/sidebar" %>
+    </div>
   </div>
 </body>
 </html>
