--- a/app/views/posts/_summary.html.erb
+++ b/app/views/posts/_summary.html.erb
@@ -1,5 +1,5 @@
 <% post = summary -%>
-<h2><%=link_to red(post.title), post %></h2>
+<%=link_to red(post.title), post %>
 
 <div class="metadata">
   <span class="user">Posted by <%= post.user.name %></span>
