Deleted everythin to do with auth users and sessions. For the time being I am the only one who needs to log in and that can be taken care of easily.

--- a/app/views/posts/_summary.html.erb
+++ b/app/views/posts/_summary.html.erb
@@ -2,8 +2,7 @@
 <%=link_to red(post.title), post %>
 
 <div class="metadata">
-  <span class="user">Posted by <%= post.user.name %></span>
-  <span class="timestamp"><%= distance_of_time_in_words_to_now post.created_at %> ago</span>
+  <span class="timestamp">Posted <%= distance_of_time_in_words_to_now post.created_at %> ago</span>
 </div>
 
 <div class="post_content">
