I have a decent layout now, but need to generate some content.

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -22,7 +22,7 @@
     </div>
     <%= render :partial => "/home/header" %>
 
-    <div class="content">
+    <div class="content partial_width">
       <%= yield %>
     </div>
     <div id="sidebar">
