--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -8,18 +8,17 @@
 
 
 
-*/html {
+*/html, p, h2 {
   margin: 0;
   padding: 0;
 }
 body {
-  font: 75% georgia, sans-serif;
-  line-height: 1.88889;
+  font: georgia, sans-serif;
+  line-height: 1.5;
   color: #555753;
   margin: 0;
   padding: 0;
 }
-p { margin-top: 0; }
 #wrapper {
   width: 900px;
   margin: 30px auto 140px;
@@ -39,10 +38,22 @@ p { margin-top: 0; }
 #logo {
   float: left;
   width: auto;
-  padding: 18px 0 34px 0;
+  padding: 0px 0 14px 0;
 }
+#logo h2 {
+  font-size: 18px;
+  font-weight: 200;
+  padding: 0;
+  margin: 0;
+}
+#logo h1 {
+  line-height: 1.2;
+  margin: 0;
+  padding: 0;
+}
+#logo p { font-weight: 600; }
 #logo a {
-  color: #ca1e00;
+  color: #c80272;
   font-size: 60px;
   font-weight: 600;
   text-decoration: none;
@@ -50,12 +61,7 @@ p { margin-top: 0; }
   letter-spacing: -2px;
   text-rendering: optimizeLegibility;
 }
-#logo h2 {
-  font-size: 18px;
-  font-weight: 200;
-  padding: 12px 4px 0 0;
-}
-#header-image {
+#logo #header-image {
   clear: both;
   border-top: 6px solid #333333;
   margin-bottom: 10px;
@@ -64,86 +70,77 @@ p { margin-top: 0; }
 .header a {
   border-bottom: 1px dotted #000000;
   text-decoration: none;
-  color: #000000;
-  font-weight: 600;
-}
-#blurb a {
-  border-bottom: 1px dotted #000000;
-  text-decoration: none;
-  color: #000000;
+  color: #444444;
   font-weight: 600;
 }
 .content a {
   border-bottom: 1px dotted #000000;
   text-decoration: none;
-  color: #000000;
+  color: #444444;
   font-weight: 600;
 }
 #sidebar a {
   border-bottom: 1px dotted #000000;
   text-decoration: none;
-  color: #000000;
+  color: #444444;
   font-weight: 600;
 }
 #footer a {
   border-bottom: 1px dotted #000000;
   text-decoration: none;
-  color: #000000;
+  color: #444444;
   font-weight: 600;
 }
 .header a:hover {
-  color: #ca1e00;
-  border-bottom: 1px dotted #ca1e00;
-}
-#blurb a:hover {
-  color: #ca1e00;
+  color: #c80272;
   border-bottom: 1px dotted #ca1e00;
 }
 #sidebar a:hover {
-  color: #ca1e00;
+  color: #c80272;
   border-bottom: 1px dotted #ca1e00;
 }
 #footer a:hover {
-  color: #ca1e00;
+  color: #c80272;
   border-bottom: 1px dotted #ca1e00;
 }
 .content a:hover {
-  color: #ca1e00;
+  color: #c80272;
   border-bottom: 1px dotted #ca1e00;
 }
 #sidebar a:hover {
   background-color: #f7f7f7;
   background-color: rgba(255, 255, 255, 0.5);
 }
-#blurb {
-  font-family: Georgia, serif;
-  height: auto;
-  border-bottom: 1px dotted #cccccc;
-  width: 100%;
-  float: left;
-  padding: 35px 0;
-  font-size: 32px;
-  font-weight: 400;
-  line-height: 120%;
-}
 .content {
-  width: 670px;
   float: left;
-  border-right: 1px dotted #cccccc;
   padding: 0 0 30px 0;
   min-height: 420px;
   overflow: hidden;
 }
+.content h2 {
+  margin-top: 25px;
+  line-height: 1;
+}
+.content h2 a { border-style: none; }
+.content h2 a:hover { border-style: none; }
+.full_width { width: 900px; }
+.partial_width {
+  width: 670px;
+  border-right: 1px dotted #cccccc;
+}
+.timestamp {
+  font-style: italic;
+  margin: 0 0 10px 3px;
+}
 #sidebar {
-  width: 200px;
+  width: 210px;
   float: right;
   margin: 0 0 25px 0;
 }
 #sidebar .block { padding: 25px 0 0; }
 #sidebar h3 {
-  padding: 0 0 3px 0;
+  padding: 0;
   margin: 0 0 0.5em 0;
-  font-size: 18px;
 }
 #sidebar .block ul {
   border-bottom: 1px dotted #cccccc;
@@ -162,15 +159,14 @@ p { margin-top: 0; }
 }
 #sidebar .block li a {
   background: transparent url(/images/bullet_black.gif) no-repeat scroll 6px 52%;
-  font-size: 13px;
   font-weight: normal;
   padding: 2px 0 2px 15px;
   display: block;
   border-bottom: none;
 }
 #sidebar .block li a:hover {
-  background: #f7f7f7 url(/images/bullet_red.gif) no-repeat scroll 6px 52%;
-  background: rgba(255, 255, 255, 0.5) url(/images/bullet_red.gif) no-repeat scroll 6px 52%;
+  background: #f7f7f7 url(/images/bullet_pink.gif) no-repeat scroll 6px 52%;
+  background: rgba(255, 255, 255, 0.5) url(/images/bullet_pink.gif) no-repeat scroll 6px 52%;
 }
 #footer {
   width: 900px;
