--- a/app/views/layouts/posts.html.erb
+++ b/app/views/layouts/posts.html.erb
@@ -22,7 +22,9 @@
     </div>
     <%= render :partial => "/home/header" %>
 
+    <div class="content full_width">
       <%= yield %>
+    </div>
   </div>
 </body>
 </html>
