More stylistic changes. I'm not sure how to make it safe to unclude float graphs (i.e.) javascript inside of the content body.

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -4,7 +4,8 @@
   border: 1px solid darkGray;
   margin: 20px 0;
   padding: 1em;
-  min-height: 350px;
+  height: 600px;
+  overflow: scroll;
 }
 #new_post, .edit_post {
   float: left;
@@ -19,4 +20,5 @@
 }
 textarea {
   width: 400px;
+  height: 572px;
 }
