--- a/app/views/home/_chart.html.erb
+++ b/app/views/home/_chart.html.erb
@@ -15,7 +15,7 @@ $(function () {
       data: [[2,3],[5,5]],
       label: "points",
       lines: { show: false},
-      points: {show: true, fill: true, fillColor: "rgba(255, 255, 255, 0.8)"},
+      points: {show: true, fill: true, fillColor: "rgb(25, 25, 25)"},
     }
     
     $.plot($("#placeholder"), [ d1, d2, d3, d4 ]);
