--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -3,4 +3,8 @@
     <h1> <%= link_to "lashleigh", root_url %> </h1>
     <h2><%= red("Finish project <--> Start new project") %> </h2>
   </div>
+  <div id="header_math">
+    $$\left( \sum_{k=1}^n a_k b_k \right)^2 \leq \left( \sum_{k=1}^n a_k^2 \right) \left( \sum_{k=1}^n b_k^2 \right)$$
+  </div>
 </div>
+
