--- a/app/views/layouts/posts.html.erb
+++ b/app/views/layouts/posts.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Ashleigh</title>
+  <script type="text/javascript" src="/MathJax/MathJax.js"></script>
   <%= javascript_include_tag "jquery-1.4.4.min", "jquery-ui-1.8.7.custom.min", "jquery.rails.js" %>
   <%= javascript_include_tag 'post' %>
   <%= javascript_include_tag 'flot/jquery.flot' %>
