--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -8,10 +8,15 @@
 
 
 
-*/html, p, h2 {
+*/html, h2 {
   margin: 0;
   padding: 0;
 }
+p {
+  margin: 0;
+  padding: 0 0 0.5em 0;
+}
+blockquote { max-width: 450px; }
 body {
   font: georgia, sans-serif;
   line-height: 1.5;
@@ -34,6 +39,10 @@ body {
   width: 900px;
   border-bottom: 1px dotted #cccccc;
   margin: 0;
+}
+#header_math {
+  float: right;
+  color: #c80272;
 }
 #logo {
   float: left;
@@ -113,7 +122,7 @@ body {
 }
 .content {
   float: left;
-  padding: 0 0 30px 0;
+  padding: 0 0 130px 0;
   min-height: 420px;
   overflow: hidden;
 }
