--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -17,10 +17,18 @@
 </head>
 <body>
   <div id="wrapper">
-    <div class="modal">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-    </div>
+    <div id="user_nav">  
+      <% if current_user %>  
+        Logged in as <%= current_user.email %>  
+        <%= link_to "Log out", log_out_path %>  
+      <% else %>  
+        <%= link_to "Sign up", sign_up_path %> or   
+        <%= link_to "Log in", log_in_path %>  
+      <% end %>  
+    </div>  
+    <% flash.each do |name, msg| %>  
+      <%= content_tag :div, msg, :id => "flash#{name}" %>  
+    <% end %> 
     <%= render :partial => "/home/header" %>
 
     <div class="content partial_width">
