--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
-
+<% if current_user and current_user.admin? %>
+  <%= link_to 'New Post', new_post_path %>
+<% end %>
 <%= render :partial => 'posts/summary', :collection => @posts %>
 
