Found a nice js math parser to add the calculator.

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -1,11 +1,12 @@
 #preview {
   float: right;
-  width: 440px;
+  width: 500px;
   border: 1px solid darkGray;
   margin: 20px 0;
   padding: 1em;
   height: 600px;
-  overflow: scroll;
+  overflow: auto;
+  overflow-x: hidden;
 }
 #new_post, .edit_post {
   float: left;
@@ -17,6 +18,16 @@
 }
 .pink {
   color: #FF0066;
+}
+#post_content {
+  margin-top: 21px;
+}
+#calculator_entry {
+}
+#calculator_display {
+}
+form {
+  float: left;
 }
 textarea {
   width: 400px;
