--- a/app/stylesheets/home.less
+++ b/app/stylesheets/home.less
@@ -23,18 +23,15 @@ body {
 
 /* Structure */
 #wrapper {
-    width: 900px;
+    width: 960px;
     margin: 30px auto 140px;
-    padding: 30px 30px 0;
+    padding: 10px;
     background: #fff;
     background: rgba(255,255,255,0.88);
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
 }
 .header {
     float: left;
-    width: 900px;
+    width: 960px;
     border-bottom: 1px dotted #ccc;
     margin: 0;
 }
@@ -119,10 +116,10 @@ body {
     }
 }
 .full_width {
-  width: 900px;
+  width: 960px;
 }
 .partial_width {
-  width: 670px;
+  width: 730px;
   border-right: 1px dotted #ccc;
 }
 .timestamp {
@@ -173,7 +170,7 @@ body {
 /* Footer */
 
 #footer {
-    width: 900px;
+    width: 960px;
     clear: both;
     border-top: 1px dotted #cccccc;
     text-align: center;
