--- a/app/views/posts/preview.html.erb
+++ b/app/views/posts/preview.html.erb
@@ -1,3 +1,6 @@
+<%= javascript_include_tag 'application' %>
+<%= javascript_include_tag 'livepreview' %>
+
 <h4 class="block breathing-room"> This live preview is still a work in progress. You can get the javascript file
   simply by inspecting this document or (for a potentially out of date copy) checking <a href="https://gist.github.com/803294">this gist</a>.</h4>
 <% form_tag do %>
