--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -10,12 +10,13 @@
 
 */#preview {
   float: right;
-  width: 440px;
+  width: 500px;
   border: 1px solid darkGray;
   margin: 20px 0;
   padding: 1em;
   height: 600px;
-  overflow: scroll;
+  overflow: auto;
+  overflow-x: hidden;
 }
 #new_post, .edit_post {
   float: left;
@@ -26,6 +27,8 @@
   clear: both;
 }
 .pink { color: #ff0066; }
+#post_content { margin-top: 21px; }
+form { float: left; }
 textarea {
   width: 400px;
   height: 572px;
