--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -25,18 +25,15 @@ body {
   padding: 0;
 }
 #wrapper {
-  width: 900px;
+  width: 960px;
   margin: 30px auto 140px;
-  padding: 30px 30px 0;
+  padding: 10px;
   background: #ffffff;
   background: rgba(255, 255, 255, 0.88);
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
 }
 .header {
   float: left;
-  width: 900px;
+  width: 960px;
   border-bottom: 1px dotted #cccccc;
   margin: 0;
 }
@@ -132,9 +129,9 @@ body {
 }
 .content h2 a { border-style: none; }
 .content h2 a:hover { border-style: none; }
-.full_width { width: 900px; }
+.full_width { width: 960px; }
 .partial_width {
-  width: 670px;
+  width: 730px;
   border-right: 1px dotted #cccccc;
 }
 .timestamp {
@@ -178,7 +175,7 @@ body {
   background: rgba(255, 255, 255, 0.5) url(/images/bullet_pink.gif) no-repeat scroll 6px 52%;
 }
 #footer {
-  width: 900px;
+  width: 960px;
   clear: both;
   border-top: 1px dotted #cccccc;
   text-align: center;
