Added my pointless game.

--- a/app/views/posts/_sidebar.html.erb
+++ b/app/views/posts/_sidebar.html.erb
@@ -1,6 +1,7 @@
 <div id="recent-posts-2" class="widget block widget_recent_entries sidebar-box"> <h3>Recent Posts</h3> 
   <ul>
     <li><a href="http://lashleigh.com/?p=5" title="Graham scan and Haskell">Graham scan and Haskell</a></li>
-    <li><a href="http://lashleigh.com/?p=1" title="Hello world!">Hello world!</a></li>
+    <li> <%= link_to "Preview", :controller => 'posts', :action => 'preview' %> </li>
+    <li> <%= link_to "Game", :controller => 'posts', :action => 'game' %> </li>
   </ul>
 </div>
