Added play and pause buttons to game

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -26,7 +26,7 @@
   overflow: hidden;
   clear: both;
 }
-.pink { color: #ff0066; }
+.pink { color: #c80272; }
 #post_content { margin-top: 21px; }
 form { float: left; }
 textarea {
