--- a/app/views/posts/game.html.erb
+++ b/app/views/posts/game.html.erb
@@ -5,3 +5,7 @@
 <%= javascript_include_tag 'game/sprite' %>
 <%= javascript_include_tag 'learnhtml5' %>
 
+<div class="game_buttons" style="clear:both;">
+<%= link_to "Pause", "#", :id => 'pause'%>
+<%= link_to "Play", "#", :id => 'play'%>
+</div>
