Added width height top left and jquery to update the attributes.

--- a/app/stylesheets/notes.less
+++ b/app/stylesheets/notes.less
@@ -1,13 +1,12 @@
 .draggable { 
   border: 1px dashed #777; 
-  overflow: hidden; 
-  float: left; 
+  position: absolute;
 }
 .resizable {
   margin: 20px;
 }
-.ui-widget-header p, .ui-widget-content p { 
-  margin: 10px; 
+.ui-widget-content { 
+  padding: 10px; 
 }
 input {
 position: absolute !important;
