--- a/public/stylesheets/notes.css
+++ b/public/stylesheets/notes.css
@@ -10,12 +10,10 @@
 
 */.draggable {
   border: 1px dashed #777777;
-  overflow: hidden;
-  float: left;
+  position: absolute;
 }
 .resizable { margin: 20px; }
-.ui-widget-header p { margin: 10px; }
-.ui-widget-content p { margin: 10px; }
+.ui-widget-content { padding: 10px; }
 input {
   position: absolute !important;
   right: 8px !important;
@@ -25,7 +23,6 @@ textarea {
   padding: 0;
   margin: 0;
   overflow: hidden;
-  text-overflow: ellipsis;
   border: none;
 }
 .formatted_content { overflow: ellipsis; }
