Somewhat improved formatting

--- a/app/stylesheets/notes.less
+++ b/app/stylesheets/notes.less
@@ -1,12 +1,25 @@
 .draggable { 
   border: 1px dashed #777; 
-  position: absolute;
+  position: absolute !important;
+  float: none !important;
+  margin: 0 !important;
 }
 .resizable {
   margin: 20px;
+  background: #FFA;
+  color: #444;
+  -webkit-box-shadow: 0px 0px 3px #999;
+  box-shadow: 0px 0px 3px #999;
+  -moz-box-shadow: 0px 0px 3px #999;
+  border: 1px solid #888;
+  z-index: 10;
 }
-.ui-widget-content { 
-  padding: 10px; 
+.in_place_editor_field {
+position: absolute;
+left: 5px;
+top: 5px;
+width: 100%;
+height: 100%;
 }
 input {
 position: absolute !important;
@@ -14,12 +27,37 @@ right: 8px !important;
 bottom: 8px;
 }
 textarea {
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
+  display: block;
+  margin: 0 ;
+  overflow-y: auto;
   border: none;
+  background: #FFA;
 }
 .formatted_content {
-  overflow: ellipsis;
+  overflow-y: auto;
+  overflow-x: hidden;
+  position: absolute;
+}
+.formatted_content ::-webkit-scrollbar {
+width: 6px;
+height: 6px;
+}
+.formatted_content ::-webkit-scrollbar-thumb {
+background-color: #FB0 !important;
+}
+.formatted_content ::-webkit-scrollbar-track {
+-webkit-border-radius: 3px;
+border-top-left-radius: 3px 3px;
+border-top-right-radius: 3px 3px;
+border-bottom-right-radius: 3px 3px;
+border-bottom-left-radius: 3px 3px;
+}
+
+.formatted_content ::-webkit-scrollbar-track-piece {
+-webkit-border-radius: 3px;
+border-top-left-radius: 3px 3px;
+border-top-right-radius: 3px 3px;
+border-bottom-right-radius: 3px 3px;
+border-bottom-left-radius: 3px 3px;
 }
 
