--- a/public/stylesheets/notes.css
+++ b/public/stylesheets/notes.css
@@ -10,19 +10,60 @@
 
 */.draggable {
   border: 1px dashed #777777;
-  position: absolute;
+  position: absolute !important;
+  float: none !important;
+  margin: 0 !important;
 }
-.resizable { margin: 20px; }
-.ui-widget-content { padding: 10px; }
+.resizable {
+  margin: 20px;
+  background: #ffffaa;
+  color: #444444;
+  -webkit-box-shadow: 0px 0px 3px #999999;
+  box-shadow: 0px 0px 3px #999999;
+  -moz-box-shadow: 0px 0px 3px #999999;
+  border: 1px solid #888888;
+  z-index: 10;
+}
+.in_place_editor_field {
+  position: absolute;
+  left: 5px;
+  top: 5px;
+  width: 100%;
+  height: 100%;
+}
 input {
   position: absolute !important;
   right: 8px !important;
   bottom: 8px;
 }
 textarea {
-  padding: 0;
+  display: block;
   margin: 0;
-  overflow: hidden;
+  overflow-y: auto;
   border: none;
+  background: #ffffaa;
 }
-.formatted_content { overflow: ellipsis; }
+.formatted_content {
+  overflow-y: auto;
+  overflow-x: hidden;
+  position: absolute;
+}
+.formatted_content::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+.formatted_content::-webkit-scrollbar-thumb { background-color: #ffbb00 !important; }
+.formatted_content::-webkit-scrollbar-track {
+  -webkit-border-radius: 3px;
+  border-top-left-radius: 3px 3px;
+  border-top-right-radius: 3px 3px;
+  border-bottom-right-radius: 3px 3px;
+  border-bottom-left-radius: 3px 3px;
+}
+.formatted_content::-webkit-scrollbar-track-piece {
+  -webkit-border-radius: 3px;
+  border-top-left-radius: 3px 3px;
+  border-top-right-radius: 3px 3px;
+  border-bottom-right-radius: 3px 3px;
+  border-bottom-left-radius: 3px 3px;
+}
