--- a/public/stylesheets/notes.css
+++ b/public/stylesheets/notes.css
@@ -31,22 +31,27 @@
   width: 100%;
   height: 100%;
 }
-input {
+.formatted_content input {
   position: absolute !important;
   right: 8px !important;
   bottom: 8px;
 }
-textarea {
+.in_place_editor_field textarea {
   display: block;
   margin: 0;
   overflow-y: auto;
   border: none;
   background: #ffffaa;
 }
-.formatted_content {
+.formatted_content, .preview {
   overflow-y: auto;
   overflow-x: hidden;
   position: absolute;
+}
+.slide {
+  width: 960px;
+  height: 720px;
+  border: 1px dotted red;
 }
 .formatted_content::-webkit-scrollbar {
   width: 6px;
