Notes can be created and destroyed but it requres a page refresh for changes to be seen.

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -11,6 +11,7 @@
           <%= red(n.content) %>
         </div>
         <div class="preview" style=<%=content_style(n)%>></div>
+        <a id="delete_<%= n.id %>" class="delete" href="#"><img alt="Close" src="/images/close.png"></a>
       </div>
     </div>
   </div>
