The preview div was messing up scrolling and later views, I'll need a different way to live preview.

--- a/app/stylesheets/notes.less
+++ b/app/stylesheets/notes.less
@@ -1,3 +1,6 @@
+.pink {
+  color: #FF6EC7;
+}
 .draggable { 
   border: 1px dashed #777; 
   position: absolute !important;
@@ -47,7 +50,7 @@ left: -12px;
 }
 .slide {
   width: 960px;
-  height: 720px;
+  height: 620px;
   border: 1px dotted red;
 }
 .formatted_content ::-webkit-scrollbar {
