--- a/public/stylesheets/notes.css
+++ b/public/stylesheets/notes.css
@@ -8,7 +8,8 @@
 
 
 
-*/.draggable {
+*/.pink { color: #ff6ec7; }
+.draggable {
   border: 1px dashed #777777;
   position: absolute !important;
   float: none !important;
@@ -57,7 +58,7 @@ a.delete {
 }
 .slide {
   width: 960px;
-  height: 720px;
+  height: 620px;
   border: 1px dotted red;
 }
 .formatted_content::-webkit-scrollbar {
