--- a/app/views/layouts/notes.html.erb
+++ b/app/views/layouts/notes.html.erb
@@ -5,6 +5,7 @@
   <%= javascript_include_tag "jquery-1.4.4.min", "jquery-ui-1.8.7.custom.min", "jquery.rails.js" %>
   <%= javascript_include_tag 'prettify/prettify' %>
   <%= javascript_include_tag 'note'%>
+  <%= javascript_include_tag 'jquery.livequery'%>
 
   <%= stylesheet_link_tag 'notes' %>
   <%= stylesheet_link_tag 'prettify' %>
