This is the first commit with merged draggable and sortable.

--- a/app/stylesheets/notes.less
+++ b/app/stylesheets/notes.less
@@ -1,20 +1,18 @@
 .pink {
   color: #FF6EC7;
 }
-.draggable { 
+h1 {
+}
+p {
+  margin: 10px;
+}
+.note { 
   border: 1px dashed #777; 
   position: absolute !important;
   float: none !important;
   margin: 0 !important;
-}
-.resizable {
-  margin: 20px;
   background: #FFA;
   color: #444;
-  -webkit-box-shadow: 0px 0px 3px #999;
-  box-shadow: 0px 0px 3px #999;
-  -moz-box-shadow: 0px 0px 3px #999;
-  border: 1px solid #888;
   z-index: 10;
 }
 .in_place_editor_field {
@@ -35,6 +33,8 @@
   overflow-y: auto;
   border: none;
   background: #FFA;
+  font-size: 1em;
+  color: #444;
 }
 .formatted_content, .preview {
   overflow-y: auto;
@@ -45,8 +45,8 @@ a.delete {
 display: none;
 position: absolute;
 border: none;
-top: -12px;
-left: -12px;
+top: -20px;
+right: -10px;
 }
 .slide {
   width: 960px;
