Added the paper_trail gem, it tracks changes to the notes model and I'm hoping to use it to make an undo button. I've also noticed a problem with prettyprint, it needs to be made live somehow, currently it requires an extra click to get it to show up.

--- a/app/stylesheets/notes.less
+++ b/app/stylesheets/notes.less
@@ -53,14 +53,14 @@ right: -10px;
   height: 620px;
   border: 1px dotted red;
 }
-.formatted_content ::-webkit-scrollbar {
+textarea ::-webkit-scrollbar, .formatted_content ::-webkit-scrollbar {
 width: 6px;
 height: 6px;
 }
-.formatted_content ::-webkit-scrollbar-thumb {
+textarea ::-webkit-scrollbar-thumb, .formatted_content ::-webkit-scrollbar-thumb {
 background-color: #FB0 !important;
 }
-.formatted_content ::-webkit-scrollbar-track {
+textarea ::-webkit-scrollbar-track, .formatted_content ::-webkit-scrollbar-track {
 -webkit-border-radius: 3px;
 border-top-left-radius: 3px 3px;
 border-top-right-radius: 3px 3px;
@@ -68,7 +68,7 @@ border-bottom-right-radius: 3px 3px;
 border-bottom-left-radius: 3px 3px;
 }
 
-.formatted_content ::-webkit-scrollbar-track-piece {
+textarea ::-webkit-scrollbar-track-piece, .formatted_content ::-webkit-scrollbar-track-piece {
 -webkit-border-radius: 3px;
 border-top-left-radius: 3px 3px;
 border-top-right-radius: 3px 3px;
