--- a/app/views/layouts/notes.html.erb
+++ b/app/views/layouts/notes.html.erb
@@ -10,6 +10,10 @@
   <%= stylesheet_link_tag 'notes' %>
   <%= stylesheet_link_tag 'prettify' %>
   <%= stylesheet_link_tag 'jquery-ui-1.8.7.custom' %>
+  <link rel="alternate stylesheet" type="text/css" title="orange"
+    href="/stylesheets/orange.css">
+  <link rel="alternate stylesheet" type="text/css" title="pink"
+    href="/stylesheets/pink.css">
  
   <%= csrf_meta_tag %>
 </head>
