--- a/public/stylesheets/notes.css
+++ b/public/stylesheets/notes.css
@@ -57,12 +57,31 @@ a.delete {
   height: 620px;
   border: 1px dotted red;
 }
+textarea::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
 .formatted_content::-webkit-scrollbar {
   width: 6px;
   height: 6px;
 }
+textarea::-webkit-scrollbar-thumb { background-color: #ffbb00 !important; }
 .formatted_content::-webkit-scrollbar-thumb { background-color: #ffbb00 !important; }
+textarea::-webkit-scrollbar-track {
+  -webkit-border-radius: 3px;
+  border-top-left-radius: 3px 3px;
+  border-top-right-radius: 3px 3px;
+  border-bottom-right-radius: 3px 3px;
+  border-bottom-left-radius: 3px 3px;
+}
 .formatted_content::-webkit-scrollbar-track {
+  -webkit-border-radius: 3px;
+  border-top-left-radius: 3px 3px;
+  border-top-right-radius: 3px 3px;
+  border-bottom-right-radius: 3px 3px;
+  border-bottom-left-radius: 3px 3px;
+}
+textarea::-webkit-scrollbar-track-piece {
   -webkit-border-radius: 3px;
   border-top-left-radius: 3px 3px;
   border-top-right-radius: 3px 3px;
