Predominantly stylistic changes, learning about webkit radial backgrounds

--- a/app/stylesheets/notes.less
+++ b/app/stylesheets/notes.less
@@ -11,7 +11,6 @@ p {
   position: absolute !important;
   float: none !important;
   margin: 0 !important;
-  background: #FFA;
   color: #444;
   z-index: 10;
 }
@@ -32,7 +31,6 @@ p {
   margin: 0 ;
   overflow-y: auto;
   border: none;
-  background: #FFA;
   font-size: 1em;
   color: #444;
 }
@@ -51,7 +49,8 @@ right: -10px;
 .slide {
   width: 960px;
   height: 620px;
-  border: 1px dotted red;
+  border: 1px dotted black;
+  background: -webkit-gradient(radial, 430 50, 0, 430 50, 541, from(white), to(#aaa))
 }
 textarea ::-webkit-scrollbar, .formatted_content ::-webkit-scrollbar {
 width: 6px;
