--- a/app/stylesheets/notes.less
+++ b/app/stylesheets/notes.less
@@ -1,6 +1,11 @@
 .pink {
   color: #FF6EC7;
 }
+.options {
+position: absolute !important;
+right: 18px !important;
+bottom: 18px;
+}
 h1 {
 }
 p {
@@ -47,6 +52,7 @@ top: -20px;
 right: -10px;
 }
 .slide {
+  border-radius: 18px;
   width: 960px;
   height: 620px;
   border: 1px dotted black;
