--- a/public/stylesheets/notes.css
+++ b/public/stylesheets/notes.css
@@ -9,6 +9,11 @@
 
 
 */.pink { color: #ff6ec7; }
+.options {
+  position: absolute !important;
+  right: 18px !important;
+  bottom: 18px;
+}
 p { margin: 10px; }
 .note {
   border: 1px dashed #777777;
@@ -51,6 +56,7 @@ a.delete {
   right: -10px;
 }
 .slide {
+  border-radius: 18px;
   width: 960px;
   height: 620px;
   border: 1px dotted black;
