--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,5 +1,7 @@
-<div class="slide"></div>
+<div class="centerbox">
+<div class="slide">
 <% @notes.each do |n| %>
   <%= render :partial => "format_note", :object => n %>
 <% end %>
-
+</div>
+</div>
