--- a/public/stylesheets/notes.css
+++ b/public/stylesheets/notes.css
@@ -14,6 +14,33 @@
   right: 18px !important;
   bottom: 18px;
 }
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+.center {
+  margin: auto;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+}
+#content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.centerbox {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  -webkit-box-orient: horizontal;
+  -webkit-box-pack: center;
+  -webkit-box-align: center;
+}
 p { margin: 10px; }
 .note {
   border: 1px dashed #777777;
@@ -56,6 +83,7 @@ a.delete {
   right: -10px;
 }
 .slide {
+  position: relative;
   border-radius: 18px;
   width: 960px;
   height: 620px;
