Removed snap from .slide and put it on an inner box so that we're snapping to something 20px away from the edge. The jquery events are getting pretty unwieldly.

--- a/app/views/layouts/notes.html.erb
+++ b/app/views/layouts/notes.html.erb
@@ -19,8 +19,10 @@
 </head>
 <body>
   <div id="content">
+    <div class="modal" style="display:none">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+  </div>
     <%= yield %>
   </div>
 </body>
