--- a/app/stylesheets/notes.less
+++ b/app/stylesheets/notes.less
@@ -1,3 +1,7 @@
+.ui-resizable-handle {
+  opacity: 0.0;
+}
+
 .pink {
   color: #FF6EC7;
 }
@@ -13,6 +17,10 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
 .center {
   margin: auto; 
@@ -43,7 +51,7 @@ p {
   margin: 10px;
 }
 .note { 
-  border: 1px dashed #777; 
+  border: 1px dashed rgba(25, 25, 25, 0.0);
   position: absolute !important;
   float: none !important;
   margin: 0 !important;
@@ -76,40 +84,51 @@ p {
   position: absolute;
 }
 a.delete {
-display: none;
-position: absolute;
-border: none;
-top: -20px;
-right: -10px;
+  display: none;
+  position: absolute;
+  border: none;
+  top: -20px;
+  right: -10px;
 }
 .slide {
   position: relative;
   border-radius: 18px;
   width: 960px;
   height: 620px;
+  background: -webkit-gradient(radial, 430 50, 0, 430 50, 541, from(white), to(#aaa));
+  -webkit-box-shadow: 0px 0px 9px black;
+}
+.slide_inner {
   border: 1px dotted black;
-  background: -webkit-gradient(radial, 430 50, 0, 430 50, 541, from(white), to(#aaa))
+  margin: 20px;
+  width: 920px;
+  height: 580px;
+}
+.creation_mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 textarea ::-webkit-scrollbar, .formatted_content ::-webkit-scrollbar {
-width: 6px;
-height: 6px;
+  width: 6px;
+  height: 6px;
 }
 textarea ::-webkit-scrollbar-thumb, .formatted_content ::-webkit-scrollbar-thumb {
-background-color: #FB0 !important;
+  background-color: #FB0 !important;
 }
 textarea ::-webkit-scrollbar-track, .formatted_content ::-webkit-scrollbar-track {
--webkit-border-radius: 3px;
-border-top-left-radius: 3px 3px;
-border-top-right-radius: 3px 3px;
-border-bottom-right-radius: 3px 3px;
-border-bottom-left-radius: 3px 3px;
+  -webkit-border-radius: 3px;
+  border-top-left-radius: 3px 3px;
+  border-top-right-radius: 3px 3px;
+  border-bottom-right-radius: 3px 3px;
+  border-bottom-left-radius: 3px 3px;
 }
 
 textarea ::-webkit-scrollbar-track-piece, .formatted_content ::-webkit-scrollbar-track-piece {
--webkit-border-radius: 3px;
-border-top-left-radius: 3px 3px;
-border-top-right-radius: 3px 3px;
-border-bottom-right-radius: 3px 3px;
-border-bottom-left-radius: 3px 3px;
+  -webkit-border-radius: 3px;
+  border-top-left-radius: 3px 3px;
+  border-top-right-radius: 3px 3px;
+  border-bottom-right-radius: 3px 3px;
+  border-bottom-left-radius: 3px 3px;
 }
 
