--- a/public/stylesheets/notes.css
+++ b/public/stylesheets/notes.css
@@ -8,7 +8,8 @@
 
 
 
-*/.pink { color: #ff6ec7; }
+*/.ui-resizable-handle { opacity: 0; }
+.pink { color: #ff6ec7; }
 .options {
   position: absolute !important;
   right: 18px !important;
@@ -20,6 +21,7 @@ body {
   width: 100%;
   height: 100%;
 }
+body::-webkit-scrollbar { display: none; }
 .center {
   margin: auto;
   position: absolute;
@@ -43,7 +45,7 @@ body {
 }
 p { margin: 10px; }
 .note {
-  border: 1px dashed #777777;
+  border: 1px dashed rgba(25, 25, 25, 0);
   position: absolute !important;
   float: none !important;
   margin: 0 !important;
@@ -87,8 +89,19 @@ a.delete {
   border-radius: 18px;
   width: 960px;
   height: 620px;
-  border: 1px dotted black;
   background: -webkit-gradient(radial, 430 50, 0, 430 50, 541, from(white), to(#aaaaaa));
+  -webkit-box-shadow: 0px 0px 9px black;
+}
+.slide_inner {
+  border: 1px dotted black;
+  margin: 20px;
+  width: 920px;
+  height: 580px;
+}
+.creation_mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 textarea::-webkit-scrollbar {
   width: 6px;
